--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "node": "20.x"
   },
   "scripts": {
-    "vk": "vite",
+    "dev": "vite",
     "build": "npx tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview"
